# ai-blog-engine

./: .dockerignore  .env.production.template  .gitignore  Dockerfile  pyproject.toml  railway.toml  requirements.txt
app/: config.py  database.py  generator.py  main.py
app/static/: style.css
app/templates/: author.html  blog.html  blog_post.html  index.html  pricing.html  topic.html
scripts/: seed_posts.py
tests/: test_database.py  test_routes.py
