[project]
name = "ai-blog-engine"
version = "1.0.0"
description = "AI SEO Blog Post Generator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "pydantic>=2.10.0",
]

[project.scripts]
blog-engine = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
